--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="colorAccent">#2196F3</color>
     <color name="white">#FFFFFFFF</color>
         <item name="primary" type="color">#0098CB</item>
         <item name="primaryDark" type="color">#003D51</item>
