--- a/app/src/main/res/layout/item_jointed_trip.xml
+++ b/app/src/main/res/layout/item_jointed_trip.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="The Jointed Trips"
+                android:text="The Joined Trips"
                 android:textAppearance="?attr/textAppearanceSubtitle1"
                 android:textColor="?attr/colorPrimary" />
 
